小工具Demo